update table heading style

--- a/less/tables.less
+++ b/less/tables.less
@@ -45,6 +45,8 @@ th {
       > td {
         background-color: #f8f8f8;
         .box-shadow(inset 0 5px 0  #f1f1f1);
+        text-transform: uppercase;
+        padding-top: 13px;
       }
     }
   }
