--- a/less/navs.less
+++ b/less/navs.less
@@ -133,6 +133,7 @@
       &:focus {
         color: @nav-pills-active-link-hover-color;
         background-color: @nav-pills-active-link-hover-bg;
+        border: 3px solid @nav-pills-border-color;
       }
     }
   }
