--- a/less/output.css
+++ b/less/output.css
@@ -2080,6 +2080,8 @@ th {
   background-color: #f8f8f8;
   -webkit-box-shadow: inset 0 5px 0 #f1f1f1;
   box-shadow: inset 0 5px 0 #f1f1f1;
+  text-transform: uppercase;
+  padding-top: 13px;
 }
 .table > tbody + tbody {
   border-top: 2px solid #f1f1f1;
@@ -3740,7 +3742,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: left;
 }
 .nav-pills > li > a {
-  border-radius: 4px;
+  border-radius: 0;
 }
 .nav-pills > li + li {
   margin-left: 2px;
@@ -3750,6 +3752,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:focus {
   color: #ffffff;
   background-color: #468cc8;
+  border: 3px solid #387fbc;
 }
 .nav-stacked > li {
   float: none;
