--- a/less/variables.less
+++ b/less/variables.less
@@ -418,7 +418,8 @@
 @nav-tabs-justified-active-link-border-color:     @body-bg;
 
 //== Pills
-@nav-pills-border-radius:                   @border-radius-base;
+@nav-pills-border-radius:                  	0;
+@nav-pills-border-color:                   	darken(@component-active-bg, 5%);
 @nav-pills-active-link-hover-bg:            @component-active-bg;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
