--- a/less/popovers.less
+++ b/less/popovers.less
@@ -10,14 +10,11 @@
   z-index: @zindex-popover;
   display: none;
   max-width: @popover-max-width;
-  padding: 1px;
   text-align: left; // Reset given new insertion method
   background-color: @popover-bg;
   background-clip: padding-box;
   border: 1px solid @popover-fallback-border-color;
   border: 1px solid @popover-border-color;
-  border-radius: @border-radius-large;
-  .box-shadow(0 5px 10px rgba(0,0,0,.2));
 
   // Overrides for proper insertion
   white-space: normal;
@@ -37,7 +34,6 @@
   line-height: 18px;
   background-color: @popover-title-bg;
   border-bottom: 1px solid darken(@popover-title-bg, 5%);
-  border-radius: (@border-radius-large - 1) (@border-radius-large - 1) 0 0;
 }
 
 .popover-content {
@@ -110,7 +106,7 @@
       top: 1px;
       margin-left: -@popover-arrow-width;
       border-top-width: 0;
-      border-bottom-color: @popover-arrow-color;
+      border-bottom-color: darken(@popover-arrow-color, 11%);
     }
   }
 
