child-theme-1 button instead of text

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -16,7 +16,7 @@
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 3px solid transparent;
   white-space: nowrap;
-  .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @border-radius-base);
+  .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; 1.35; @border-radius-base); // line-height default is @line-height-base
   .user-select(none);
 
   &,
