--- a/less/carousel.less
+++ b/less/carousel.less
@@ -112,18 +112,26 @@
   .icon-prev,
   .glyphicon-chevron-left {
     left: 50%;
-    margin-left: -10px;
+    margin-left: -15px;
+    border: 2px solid;
+    &:before{
+      content: '';
+    }
   }
   .icon-next,
   .glyphicon-chevron-right {
     right: 50%;
-    margin-right: -10px;
+    margin-right: -15px;
+    border: 2px solid;
+     &:before{
+      content: '';
+    }
   }
   .icon-prev,
   .icon-next {
-    width:  20px;
-    height: 20px;
-    margin-top: -10px;
+    width:  45px;
+    height: 45px;
+    margin-top: -20px;
     font-family: serif;
   }
 
@@ -214,9 +222,9 @@
     .glyphicon-chevron-right,
     .icon-prev,
     .icon-next {
-      width: 30px;
-      height: 30px;
-      margin-top: -15px;
+      width: 45px;
+      height: 45px;
+      margin-top: -20px;
       font-size: 30px;
     }
     .glyphicon-chevron-left,
@@ -239,5 +247,15 @@
   // Move up the indicators
   .carousel-indicators {
     bottom: 20px;
+  }
+}
+
+@media (max-width: @screen-xs-max) {
+  .carousel-control {
+    .glyphicon-chevron-left, 
+    .glyphicon-chevron-right{
+      border: 0;
+      top: 40%;
+    }
   }
 }
