--- a/less/panels.less
+++ b/less/panels.less
@@ -7,9 +7,7 @@
 .panel {
   margin-bottom: @line-height-computed;
   background-color: @panel-bg;
-  border: 1px solid transparent;
-  border-radius: @panel-border-radius;
-  .box-shadow(0 1px 1px rgba(0,0,0,.05));
+  border: 3px solid transparent;
 }
 
 // Panel contents
@@ -21,8 +19,7 @@
 // Optional heading
 .panel-heading {
   padding: @panel-heading-padding;
-  border-bottom: 1px solid transparent;
-  .border-top-radius((@panel-border-radius - 1));
+  border-bottom: 3px solid;
 
   > .dropdown .dropdown-toggle {
     color: inherit;
@@ -35,6 +32,7 @@
   margin-bottom: 0;
   font-size: ceil((@font-size-base * 1.125));
   color: inherit;
+  font-weight: bold;
 
   > a {
     color: inherit;
@@ -45,8 +43,6 @@
 .panel-footer {
   padding: @panel-footer-padding;
   background-color: @panel-footer-bg;
-  border-top: 1px solid @panel-inner-border;
-  .border-bottom-radius((@panel-border-radius - 1));
 }
 
 
@@ -120,6 +116,22 @@
       }
     }
   }
+
+  // Remove top border from thead by default
+  > .table {
+    > caption + thead,
+    > colgroup + thead,
+    > thead:first-child {
+      > tr:first-child {
+        > th,
+        > td {
+          .box-shadow(none);
+          padding-top: 8px;
+        }
+      }
+    }
+  }
+
   // Add border bottom radius for last one
   > .table:last-child,
   > .table-responsive:last-child > .table:last-child {
