--- a/less/variables.less
+++ b/less/variables.less
@@ -577,7 +577,7 @@
 //** Background color of modal content area
 @modal-content-bg:                             #fff;
 //** Modal content border color
-@modal-content-border-color:                   rgba(0,0,0,.2);
+@modal-content-border-color:                   #f1f1f1;
 //** Modal content border color **for IE8**
 @modal-content-fallback-border-color:          #999;
 
@@ -586,7 +586,7 @@
 //** Modal backdrop opacity
 @modal-backdrop-opacity:      .5;
 //** Modal header border color
-@modal-header-border-color:   #e5e5e5;
+@modal-header-border-color:   #f1f1f1;
 //** Modal footer border color
 @modal-footer-border-color:   @modal-header-border-color;
 
