--- a/less/modals.less
+++ b/less/modals.less
@@ -53,9 +53,8 @@
   background-color: @modal-content-bg;
   border: 1px solid @modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
   border: 1px solid @modal-content-border-color;
-  border-radius: @border-radius-large;
-  .box-shadow(0 3px 9px rgba(0,0,0,.5));
   background-clip: padding-box;
+  box-shadow: 4px 5px rgba(0, 0, 0, 0.06);
   // Remove focus outline from opened modal
   outline: 0;
 }
@@ -136,9 +135,6 @@
   .modal-dialog {
     width: @modal-md;
     margin: 30px auto;
-  }
-  .modal-content {
-    .box-shadow(0 5px 15px rgba(0,0,0,.5));
   }
 
   // Modal sizes
