--- a/less/output.css
+++ b/less/output.css
@@ -4327,14 +4327,12 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 8px 15px;
   margin-bottom: 20px;
   list-style: none;
-  background-color: #f5f5f5;
-  border-radius: 4px;
 }
 .breadcrumb > li {
   display: inline-block;
 }
 .breadcrumb > li + li:before {
-  content: "/\00a0";
+  content: "»\00a0";
   padding: 0 5px;
   color: #cccccc;
 }
