--- a/less/output.css
+++ b/less/output.css
@@ -3623,12 +3623,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 5px 15px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #dddddd;
 }
 .nav > li.disabled > a {
   color: #777777;
@@ -3656,29 +3656,36 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   max-width: none;
 }
 .nav-tabs {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 3px solid #dddddd;
 }
 .nav-tabs > li {
   float: left;
-  margin-bottom: -1px;
+  margin-bottom: -3px;
 }
 .nav-tabs > li > a {
-  margin-right: 2px;
+  margin-right: 5px;
   line-height: 1.42857143;
-  border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
+  border: 3px solid transparent;
+  border-bottom-style: none;
 }
-.nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #dddddd;
+.nav-tabs > li > a:hover,
+.nav-tabs > li > a:active,
+.nav-tabs > li > a:focus {
+  border-color: #dddddd;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
   background-color: #ffffff;
-  border: 1px solid #dddddd;
+  border: 3px solid #dddddd;
   border-bottom-color: transparent;
+  border-bottom-style: none;
   cursor: default;
+}
+.nav-tabs > li.dropdown.open > a {
+  border-bottom: 3px solid;
+  padding-bottom: 5px;
 }
 .nav-tabs.nav-justified {
   width: 100%;
@@ -3706,32 +3713,39 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs.nav-justified > li > a {
   margin-right: 0;
-  border-radius: 4px;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-style: none;
 }
 .nav-tabs.nav-justified > .active > a,
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs.nav-justified > .active > a:focus {
-  border: 1px solid #dddddd;
+  border: 3px solid #dddddd;
+  border-bottom-style: none;
+  padding-bottom: 11px;
 }
 @media (min-width: 768px) {
   .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #dddddd;
-    border-radius: 4px 4px 0 0;
+    border-bottom: 3px solid #dddddd;
   }
-  .nav-tabs.nav-justified > .active > a,
-  .nav-tabs.nav-justified > .active > a:hover,
-  .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
-  }
+}
+.nav-tabs.nav-justified > li > a:hover,
+.nav-tabs.nav-justified > li > a:active,
+.nav-tabs.nav-justified > li > a:focus {
+  border-top: 3px solid #dddddd;
+}
+.nav-tabs > li > a {
+  padding: 5px 15px 8px;
 }
 .nav-pills > li {
   float: left;
 }
 .nav-pills > li > a {
   border-radius: 0;
+  border: 3px solid transparent;
 }
 .nav-pills > li + li {
-  margin-left: 2px;
+  margin-left: 5px;
 }
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
@@ -3744,7 +3758,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: none;
 }
 .nav-stacked > li + li {
-  margin-top: 2px;
+  margin-top: 5px;
   margin-left: 0;
 }
 .nav-justified {
@@ -3775,22 +3789,20 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs-justified > li > a {
   margin-right: 0;
-  border-radius: 4px;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-style: none;
 }
 .nav-tabs-justified > .active > a,
 .nav-tabs-justified > .active > a:hover,
 .nav-tabs-justified > .active > a:focus {
-  border: 1px solid #dddddd;
+  border: 3px solid #dddddd;
+  border-bottom-style: none;
+  padding-bottom: 11px;
 }
 @media (min-width: 768px) {
   .nav-tabs-justified > li > a {
-    border-bottom: 1px solid #dddddd;
-    border-radius: 4px 4px 0 0;
-  }
-  .nav-tabs-justified > .active > a,
-  .nav-tabs-justified > .active > a:hover,
-  .nav-tabs-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
+    border-bottom: 3px solid #dddddd;
   }
 }
 .tab-content > .tab-pane {
@@ -5019,19 +5031,14 @@ a.list-group-item-danger.active:focus {
 .panel {
   margin-bottom: 20px;
   background-color: #ffffff;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  border: 3px solid transparent;
 }
 .panel-body {
-  padding: 15px;
+  padding: 10px;
 }
 .panel-heading {
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
+  padding: 10px;
+  border-bottom: 3px solid;
 }
 .panel-heading > .dropdown .dropdown-toggle {
   color: inherit;
@@ -5041,16 +5048,14 @@ a.list-group-item-danger.active:focus {
   margin-bottom: 0;
   font-size: 16px;
   color: inherit;
+  font-weight: bold;
 }
 .panel-title > a {
   color: inherit;
 }
 .panel-footer {
-  padding: 10px 15px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #dddddd;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
+  padding: 10px;
+  background-color: #dddddd;
 }
 .panel > .list-group {
   margin-bottom: 0;
@@ -5104,6 +5109,16 @@ a.list-group-item-danger.active:focus {
 .panel > .table:first-child > tbody:first-child > tr:first-child th:last-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child th:last-child {
   border-top-right-radius: 3px;
+}
+.panel > .table > caption + thead > tr:first-child > th,
+.panel > .table > colgroup + thead > tr:first-child > th,
+.panel > .table > thead:first-child > tr:first-child > th,
+.panel > .table > caption + thead > tr:first-child > td,
+.panel > .table > colgroup + thead > tr:first-child > td,
+.panel > .table > thead:first-child > tr:first-child > td {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  padding-top: 8px;
 }
 .panel > .table:last-child,
 .panel > .table-responsive:last-child > .table:last-child {
@@ -5208,121 +5223,121 @@ a.list-group-item-danger.active:focus {
   border-bottom: 0;
 }
 .panel-group .panel-heading + .panel-collapse > .panel-body {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #f2f2f2;
 }
 .panel-group .panel-footer {
   border-top: 0;
 }
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #f2f2f2;
 }
 .panel-default {
-  border-color: #dddddd;
+  border-color: #f2f2f2;
 }
 .panel-default > .panel-heading {
   color: #333333;
-  background-color: #f5f5f5;
-  border-color: #dddddd;
+  background-color: #dddddd;
+  border-color: #f2f2f2;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #dddddd;
+  border-top-color: #f2f2f2;
 }
 .panel-default > .panel-heading .badge {
-  color: #f5f5f5;
+  color: #dddddd;
   background-color: #333333;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #dddddd;
+  border-bottom-color: #f2f2f2;
 }
 .panel-primary {
-  border-color: #468cc8;
+  border-color: #387fbc;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
   background-color: #468cc8;
-  border-color: #468cc8;
+  border-color: #387fbc;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #468cc8;
+  border-top-color: #387fbc;
 }
 .panel-primary > .panel-heading .badge {
   color: #468cc8;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #468cc8;
+  border-bottom-color: #387fbc;
 }
 .panel-success {
-  border-color: #60b761;
+  border-color: #4fae50;
 }
 .panel-success > .panel-heading {
-  color: #60b761;
+  color: #ffffff;
   background-color: #60b761;
-  border-color: #60b761;
+  border-color: #4fae50;
 }
 .panel-success > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #60b761;
+  border-top-color: #4fae50;
 }
 .panel-success > .panel-heading .badge {
   color: #60b761;
-  background-color: #60b761;
+  background-color: #ffffff;
 }
 .panel-success > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #60b761;
+  border-bottom-color: #4fae50;
 }
 .panel-info {
-  border-color: #5fc0dc;
+  border-color: #4ab8d7;
 }
 .panel-info > .panel-heading {
-  color: #5fc0dc;
+  color: #ffffff;
   background-color: #5fc0dc;
-  border-color: #5fc0dc;
+  border-color: #4ab8d7;
 }
 .panel-info > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #5fc0dc;
+  border-top-color: #4ab8d7;
 }
 .panel-info > .panel-heading .badge {
   color: #5fc0dc;
-  background-color: #5fc0dc;
+  background-color: #ffffff;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #5fc0dc;
+  border-bottom-color: #4ab8d7;
 }
 .panel-warning {
-  border-color: #efad57;
+  border-color: #eda240;
 }
 .panel-warning > .panel-heading {
-  color: #efad57;
+  color: #ffffff;
   background-color: #efad57;
-  border-color: #efad57;
+  border-color: #eda240;
 }
 .panel-warning > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #efad57;
+  border-top-color: #eda240;
 }
 .panel-warning > .panel-heading .badge {
   color: #efad57;
-  background-color: #efad57;
+  background-color: #ffffff;
 }
 .panel-warning > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #efad57;
+  border-bottom-color: #eda240;
 }
 .panel-danger {
-  border-color: #d75553;
+  border-color: #d2413e;
 }
 .panel-danger > .panel-heading {
-  color: #d75553;
+  color: #ffffff;
   background-color: #d75553;
-  border-color: #d75553;
+  border-color: #d2413e;
 }
 .panel-danger > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #d75553;
+  border-top-color: #d2413e;
 }
 .panel-danger > .panel-heading .badge {
   color: #d75553;
-  background-color: #d75553;
+  background-color: #ffffff;
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #d75553;
+  border-bottom-color: #d2413e;
 }
 .embed-responsive {
   position: relative;
@@ -5435,11 +5450,9 @@ button.close {
   position: relative;
   background-color: #ffffff;
   border: 1px solid #999999;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  border: 1px solid #f1f1f1;
   background-clip: padding-box;
+  box-shadow: 4px 5px rgba(0, 0, 0, 0.06);
   outline: 0;
 }
 .modal-backdrop {
@@ -5461,7 +5474,7 @@ button.close {
 }
 .modal-header {
   padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #f1f1f1;
   min-height: 16.42857143px;
 }
 .modal-header .close {
@@ -5478,7 +5491,7 @@ button.close {
 .modal-footer {
   padding: 15px;
   text-align: right;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid #f1f1f1;
 }
 .modal-footer .btn + .btn {
   margin-left: 5px;
@@ -5501,10 +5514,6 @@ button.close {
   .modal-dialog {
     width: 600px;
     margin: 30px auto;
-  }
-  .modal-content {
-    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   }
   .modal-sm {
     width: 300px;
@@ -5824,18 +5833,28 @@ button.close {
 .carousel-control .icon-prev,
 .carousel-control .glyphicon-chevron-left {
   left: 50%;
-  margin-left: -10px;
+  margin-left: -15px;
+  border: 2px solid;
+}
+.carousel-control .icon-prev:before,
+.carousel-control .glyphicon-chevron-left:before {
+  content: '';
 }
 .carousel-control .icon-next,
 .carousel-control .glyphicon-chevron-right {
   right: 50%;
-  margin-right: -10px;
+  margin-right: -15px;
+  border: 2px solid;
+}
+.carousel-control .icon-next:before,
+.carousel-control .glyphicon-chevron-right:before {
+  content: '';
 }
 .carousel-control .icon-prev,
 .carousel-control .icon-next {
-  width: 20px;
-  height: 20px;
-  margin-top: -10px;
+  width: 45px;
+  height: 45px;
+  margin-top: -20px;
   font-family: serif;
 }
 .carousel-control .icon-prev:before {
@@ -5893,9 +5912,9 @@ button.close {
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
   .carousel-control .icon-next {
-    width: 30px;
-    height: 30px;
-    margin-top: -15px;
+    width: 45px;
+    height: 45px;
+    margin-top: -20px;
     font-size: 30px;
   }
   .carousel-control .glyphicon-chevron-left,
@@ -5913,6 +5932,13 @@ button.close {
   }
   .carousel-indicators {
     bottom: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .glyphicon-chevron-right {
+    border: 0;
+    top: 40%;
   }
 }
 .clearfix:before,
