--- a/less/pagination.less
+++ b/less/pagination.less
@@ -5,7 +5,6 @@
   display: inline-block;
   padding-left: 0;
   margin: @line-height-computed 0;
-  border-radius: @border-radius-base;
 
   > li {
     display: inline; // Remove list-style and block-level defaults
@@ -18,20 +17,18 @@
       text-decoration: none;
       color: @pagination-color;
       background-color: @pagination-bg;
-      border: 1px solid @pagination-border;
-      margin-left: -1px;
+      border: 3px solid @pagination-border;
+      margin-left: -3px;
     }
     &:first-child {
       > a,
       > span {
         margin-left: 0;
-        .border-left-radius(@border-radius-base);
       }
     }
     &:last-child {
       > a,
       > span {
-        .border-right-radius(@border-radius-base);
       }
     }
   }
@@ -54,7 +51,6 @@
       z-index: 2;
       color: @pagination-active-color;
       background-color: @pagination-active-bg;
-      border-color: @pagination-active-border;
       cursor: default;
     }
   }
@@ -79,10 +75,10 @@
 
 // Large
 .pagination-lg {
-  .pagination-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @border-radius-large);
+  .pagination-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; 0);
 }
 
 // Small
 .pagination-sm {
-  .pagination-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; @border-radius-small);
+  .pagination-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; 0);
 }
