child-theme-1 button (update)

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -233,6 +233,11 @@
   > .btn-group .dropdown-menu {
     left: auto;
   }
+  .btn:not(:first-child),
+  .btn-group:not(:first-child) > button,
+  .btn-group:not(:first-child) > a{
+    border-left-style: none;
+  }
 }
 
 
