--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -26,11 +26,11 @@
 // Outer container
 .progress {
   overflow: hidden;
-  height: @line-height-computed;
-  margin-bottom: @line-height-computed;
+  height: 24px; //default is @line-height-computed
+  margin-bottom: 7px; //default is @line-height-computed
   background-color: @progress-bg;
-  border-radius: @border-radius-base;
-  .box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
+  // border-radius: @border-radius-base;
+  .box-shadow(inset 0 -3px 0px rgba(0,0,0,.1));
 }
 
 // Bar of progress
