child-theme-1 media

--- a/less/media.less
+++ b/less/media.less
@@ -11,6 +11,10 @@
 .media-body {
   overflow: hidden;
   zoom: 1;
+  color: #878787;
+  > h4{
+    color: #000000;
+  }
 }
 
 // Proper spacing between instances of .media
