--- a/less/output.css
+++ b/less/output.css
@@ -4834,6 +4834,11 @@ a.thumbnail.active {
 .media-body {
   overflow: hidden;
   zoom: 1;
+  color: #878787;
+}
+.media > h4,
+.media-body > h4 {
+  color: #000000;
 }
 .media,
 .media .media {
